Fix: Overflow-x bug and CoffeeStepper Component items bug.

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 html,
 body {
   width: 100%;
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
